force-app/main/default/objects/ssot__RetailStoreGroupAssignment__dlm/fields/ssot__RetailStoreGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RetailStoreGroupId__c</fullName>
    <label>Retail Store Group</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RetailStoreGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>