force-app/main/default/objects/ssot__RetailStoreGroupAssignment__dlm/fields/ssot__RetailStoreId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RetailStoreId__c</fullName>
    <label>Retail Store</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RetailStoreId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>